fixed UI bug, navbar not collapsing correctly

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   height: 3.25em;
   margin-bottom: 20px;
   line-height: 215%;
+  flex-wrap: nowrap;
 }
 
 /*   */
